fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@ html{
   align-items: center;
   justify-content: space-between;
   height: 10vh;
-  padding: 5vh 5vh;
+  padding: 5vw 5vw;
 }
 .left {
   margin-top: 40px;
